--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "autoprefixer": "10.4.15",
     "framer-motion": "^10.16.0",
     "howler": "^2.2.3",
